feat: enhance advanced scan settings with configurable methods and tooltips
- Refactored `AdvancedSettingsBottomSheet` to use a `GridLayout` for scan methods, improving the UI layout and adding support for a new `NetBIOS` discovery option.
- Implemented long-press functionality for TCP, ICMP, and SSDP buttons to open configuration dialogs for custom timeouts and parameters.
- Added new layout resources (`dialog_tcp_config.xml`, `dialog_icmp_config.xml`, `dialog_ssdp_config.xml`) and a custom `edit_text_border.xml` drawable for the configuration interfaces.
- Introduced `RoundedDialog` and `ShapeAppearanceOverlay.Dialog.Rounded` styles in `themes.xml` (light and dark) to standardize the appearance of configuration alerts.
- Improved the selection logic in `AdvancedSettingsBottomSheet` to maintain mutual exclusivity between "AUTO" and manual scan methods.
- Added tooltips to scan method buttons (for API 26+) to guide users toward long-press configuration options.
- Optimized SharedPreferences handling to persist custom configuration values for port numbers, ping counts, and discovery timeouts.
- Cleaned up manual color manipulation logic by consolidating button style updates into a helper method.